# Governlayer

./: .dockerignore  .env.example  .gitignore  .railway-trigger  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  api.py  database.py  docker-compose.yml  drift_detection.py  governlayer_mcp.py  pyproject.toml  railway.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5b38b2c055f0_add_enterprise_tables.py  a1b2c3d4e5f6_add_stripe_columns.py  b2c3d4e5f6a7_add_registry_incidents_policies.py  c3d4e5f6a7b8_add_agent_registry_shadow_ai.py  d4e5f6a7b8c9_add_org_id_tenant_isolation.py  d4e5f6a7b8c9_add_waitlist_demo_tables.py  e5f6a7b8c9d0_add_user_mfa_reset_and_mutation_logs.py  f6a7b8c9d0e1_add_vendor_risk_tables.py  g7b8c9d0e1f2_add_compliance_hub_tables.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  api.js  auth.jsx  index.css
dashboard/src/components/: ErrorBanner.jsx  HealthGauge.jsx  Layout.jsx  Spinner.jsx
dashboard/src/pages/: AuditTrail.jsx  Dashboard.jsx  Frameworks.jsx  Login.jsx  Models.jsx  RiskScanner.jsx
docs/: COST_MODEL.md  SOW_GovernLayer_Platform.md  architecture.md
docs/404/: index.html
docs/about/: index.html
docs/api-docs/: index.html
docs/audit-portal/: index.html
docs/auditor/: index.html
docs/beta/: BETA_AGREEMENT.md  index.html
docs/beta-sign/: index.html
docs/blog/: index.html
docs/business/: financial_model.py
docs/careers/: index.html
docs/changelog/: index.html
docs/competitive/: index.html
docs/compliance-checklist/: index.html
docs/contact/: index.html
docs/customers/: index.html
docs/dashboard/: index.html
docs/demo/: index.html
docs/documentation/: index.html
docs/forgot-password/: index.html
docs/founder/: index.html
docs/incidents/: index.html
docs/landing/: index.html
docs/legal/: beta-testing-agreement.md  dpa.html  index.html
docs/login/: index.html
docs/marketing/: index.html  robots.txt  sitemap.xml
docs/onboarding/: index.html
docs/pitch/: exec.html  index.html
docs/playground/: index.html
docs/pricing/: index.html
docs/privacy/: index.html
docs/product/: index.html
docs/registry/: index.html
docs/reset/: index.html
docs/signup/: index.html
docs/soc2/: index.html
docs/soc2-checklist/: index.html
docs/status/: index.html
docs/terms/: index.html
docs/trust/: index.html
docs/vendor-questionnaire/: index.html
docs/website/: next.config.js  package-lock.json  package.json
docs/workspace/: index.html
integrations/github-action/: README.md  action.yml  entrypoint.sh
integrations/langchain/: README.md  pyproject.toml  setup.py
integrations/langchain/examples/: basic_usage.py
integrations/langchain/governlayer/: __init__.py  callback.py  client.py  decorators.py  middleware.py  types.py
n8n-workflows/: governlayer_full_pipeline.json
requirements/: base.txt  dev.txt  prod.txt
scripts/: backup.sh  cost_model.py  governlayer_daemon.py  migrate_stripe_prices.py  setup.sh  verify_stripe_prices.py
sdk/: README.md  pyproject.toml  setup.py
sdk/governlayer/: __init__.py  client.py  exceptions.py  models.py
sdk/governlayer-py/: README.md  pyproject.toml
sdk/governlayer-py/examples/: anthropic_example.py  openai_example.py
sdk/governlayer-py/governlayer/: __init__.py  _config.py  anthropic_wrapper.py  client.py  decorators.py  openai_wrapper.py
sdk/python/: setup.py
sdk/python/governlayer/: __init__.py  client.py  exceptions.py
src/: config.py  main.py  scheduler.py  storage.py
src/agents/: achonye.py  compliance_agent.py  orchestrator.py  threat_agent.py
src/agi/: __init__.py  ccv.py  dad.py  macm.py  rsim.py
src/analytics/: __init__.py  data_drift.py  explainability.py  fairness.py  guardrails.py
src/api/: achonye.py  agent_governance.py  agent_registry.py  agi.py  analytics.py  analytics_usage.py  assets.py  audit.py  auth.py  automation.py  billing.py  calendar.py  compliance_hub.py  controls.py  credentials.py  dashboard.py  deps.py  enterprise.py  enterprise_features.py  evidence.py  export.py  frameworks.py  governance.py  growth.py  hitl.py  incidents.py  integrations.py  ipi.py  knowledge_graph.py  ledger.py  mfa.py  notifications.py  oauth.py  pagination.py  personnel.py  policies.py  rbac_views.py  registry.py  remediation.py  reports.py  (+8 more)
src/drift/: detection.py
src/email/: __init__.py  service.py  templates.py
src/evidence/: __init__.py  aws_connector.py  connectors.py  github_connector.py  rest_connector.py
src/frameworks/: __init__.py  base.py  eu_ai_act.py  nist_ai_rmf.py  registry.py
src/governance/: __init__.py  framework_registry.py  frameworks.py  hitl.py  knowledge_graph.py  policy_engine.py
src/integrations/: __init__.py  aws.py  connectors.py  gcp.py  github.py
src/ipi/: framework_crosswalk.py  scanner.py
src/llm/: __init__.py  consensus.py  providers.py  router.py
src/mcp/: server.py
src/middleware/: error_tracking.py  logging.py  metrics.py  rate_limit.py  usage.py  validation.py
src/models/: agents.py  compliance.py  database.py  evidence.py  policy.py  registry.py  schemas.py  tenant.py  vendor.py
src/notifications/: email.py  templates.py
src/reports/: __init__.py  data.py  generator.py
src/safety/: __init__.py  bias_scanner.py
src/security/: api_key_auth.py  auth.py  credentials.py  oauth.py  policy_engine.py
tests/: conftest.py  test_agents.py  test_agi.py  test_analytics_usage.py  test_api.py  test_billing.py  test_credentials.py  test_drift.py  test_enterprise.py  test_hitl.py  test_incidents.py  test_ipi.py  test_ledger.py  test_mfa.py  test_notifications.py  test_registry.py  test_reports.py  test_risk.py  test_risk_patent.py  test_safety.py
(+38 files in other folders)
