[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governlayer"
version = "0.1.0"
description = "GovernLayer Python SDK — runtime governance for every AI agent decision."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "GovernLayer", email = "founders@governlayer.ai" }
]
keywords = ["ai", "governance", "compliance", "llm", "openai", "anthropic", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
all = ["openai>=1.0", "anthropic>=0.18"]

[project.urls]
Homepage = "https://www.governlayer.ai"
Documentation = "https://www.governlayer.ai/docs"
Source = "https://github.com/Governlayer-stack/Governlayer"
Issues = "https://github.com/Governlayer-stack/Governlayer/issues"

[tool.setuptools.packages.find]
include = ["governlayer*"]
exclude = ["examples*", "tests*"]
